# rest_tools

./: .flake8  .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml  pythonpublish.yml
example/: api_params.json  make_request.py
ndd_rest_tools/: __init__.py  main.py  utils.py
rest_tools/: __init__.py  welcome.py
tests/: test_make_request.py  test_welcome.py
