[metadata]
name=rest_tools
download_url=https://github.com/hpduongducnhan/rest_tools/tarball/master
description=A group of tools for Restful API
long_description=file:README.md
long_description_content_type=text/markdown
author=hpduongducnhan
author_email=hpduongducnhan@gmail.com
maintainer=hpduongducnhan
maintainer_email=hpduongducnhan@gmail.com
url=https://github.com/hpduongducnhan/rest_tools
license=MIT
license_files=LICENSE
classifiers=
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    Programming Language :: Python :: 3

[options]
packages=
    rest_tools
python_requires=>=3.0.*, <4,
install_requires=
    requests==2.26.0

[options.entry_points]
console_scripts =
    welcome = rest_tools:welcome

[bdist_wheel]
universal=1